# parrot

./: .gitignore  CLAUDE.md  package.json
apps/api/: drizzle.config.ts  package.json  parrot.db  tsconfig.json
apps/api/src/: index.ts
apps/api/src/db/: index.ts  schema.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: auth.ts  cleanup.ts  history.ts  profile.ts  sync.ts  transcribe.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/public/fonts/License/: OFL.txt
apps/desktop/src/: main.tsx  routeTree.gen.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  cleanup.rs  cloud_api.rs  db.rs  lib.rs  main.rs  transcription.rs
apps/desktop/src/lib/: api.ts  auth.tsx
apps/desktop/src/routes/: __root.tsx  _auth.tsx  _onboarding.tsx  index.tsx  profile.tsx  settings.tsx
apps/desktop/src/routes/_auth/: login.tsx  signup.tsx
apps/desktop/src/routes/_onboarding/: cloud-setup.tsx  local-setup.tsx  setup-mode.tsx  tour.tsx
src-tauri/: Cargo.toml  tauri.conf.json
